Changes on DbContext

--- a/LiveProduction-Api.Data/LiveProduction-Api.Data.csproj
+++ b/LiveProduction-Api.Data/LiveProduction-Api.Data.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LiveProduction-Api.Core\LiveProduction-Api.Core.csproj" />
+  </ItemGroup>
+
 </Project>
